unreleased

* Enhancements

  * FuzzyMatch#find_all_with_score returns a sorted array of records with their scores - thanks @brycesenz! (https://github.com/seamusabshere/fuzzy_match/issues/3)

1.4.0 / 2012-09-07

* Breaking changes

  * Option keys are no longer symbolized automatically - make sure you do that if there's any chance they'll be strings
  * active_record_inline_schema is no longer a runtime dependency - add it to your Gemfile if you use FuzzyMatch::CachedResult

* Enhancements

  * Tiny bit better #explain(needle)
  * Remove dependency on ActiveSupport

1.3.3 / 2012-04-13

* Enhancements

  * Now you must require 'fuzzy_match/cached_result' if you want to use it.
  * Use active_record_inline_schema to create the FuzzyMatch::CachedResult table
  * Test against CohortAnalysis, the replacement for CohortScope
  * Fix some other random deprecations (like set_primary_key)

1.3.2 / 2012-02-24

* Enhancements

  * Start keeping a changelog!
  * renamed blockings to groupings
  * cleaned up tests

* Bug fixes

  * better handling for one-letter similiarities like 'X foo' vs 'X bar' which couldn't be detected by pair distance
  * take deprecated option :tighteners as :normalizers