@@ -2,6 +2,7 @@ unreleased
 
 * Enhancements
 
+  * '2A' is allowed to match '2 A'... funky stuff with pair distance and short strings
   * FuzzyMatch#find_all_with_score returns a sorted array of records with their scores - thanks @brycesenz! (https://github.com/seamusabshere/fuzzy_match/issues/3)
 
 1.4.0 / 2012-09-07
